# ovid

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs  merge.rs  parse.rs  split.rs
tests/: merge.rs
