[workspace]
members = ["."]

[package]
name = "ovid"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "fast, bidirectional PDF and Image converter"
repository = "https://github.com/euceph/ovid"
keywords = ["pdf", "image", "converter", "png", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
turbojpeg = "1.3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
mupdf = { version = "0.6", features = ["sys-lib-libjpeg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp", "gif"] }
png = "0.18"
lopdf = "0.34"
anyhow = "1"
rayon = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
