[workspace]
members = ["."]

[package]
name = "ovid"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "fast, bidirectional PDF and Image converter"
repository = "https://github.com/euceph/ovid"
keywords = ["pdf", "image", "converter", "png", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
turbojpeg = { version = "1.3", default-features = false, features = ["pkg-config"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
mupdf = { git = "https://github.com/messense/mupdf-rs.git", features = ["sys-lib-libjpeg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp", "gif"] }
png = "0.18"
lopdf = "0.34"
anyhow = "1"
rayon = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
mimalloc = { version = "0.1", default-features = false }
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
